traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:8: error: '(' expected but identifier found.
    if getDirection==directio.EAST {gauche;
       ^Snake:13: error: illegal start of simple expression
          droite}}
                 ^