traversal.snake.Snake.scala.code
override def run() {

while (!posiFinal) {
  if (!estFaceMur) {
    avance;
  }
  else {
    if getDirection==directio.EAST {gauche;
       avance;
       gauche}
    else {droite;
         avance;
          droite}}
}
}
def posiFinal():Boolean = {
  return (estFaceMur && estDroiteMur && getDirection==Direction.EAST)
    
}

def estDroiteMur():Boolean = {
   var a:Boolean=false ;
   gauche;
   a=estFaceMur
   droite ;
  return a
}